chapter-04/examples/errors/promise-no-catch.js
'use strict';

Promise.resolve('ok')
  .then(() => {
    throw new Error('Oops !');
  });
